сделать add marks, пройти постман тесты add marks